--- a/src/assets/css/Forms.css
+++ b/src/assets/css/Forms.css
@@ -1,7 +1,7 @@
 .card-auth{
   background-color: transparent;
   border: 2px solid #66623f;
-  border-radius: 0px;
+  border-radius: 5px;
   padding: 15px;
 }
 
@@ -16,13 +16,9 @@
 	letter-spacing: 4px;
 }
 
-.text-register {
+.link-auth {
   cursor: pointer;
-  color: #949494;
-}
-
-.text-register:hover {
-  text-decoration: underline;
+  color: #949494!important;
 }
 
 label {
