--- a/src/assets/css/Forms.css
+++ b/src/assets/css/Forms.css
@@ -44,22 +44,12 @@ label {
 }
 
 .btn-bingo {
-	border-radius: 0;
-	letter-spacing: 2px;
-	color: #c62f3a;
-	font-size: 20px;
-	font-weight: 600;
-	border-top: 1.5px solid #66623f;
-	border-bottom: 1.5px solid #66623f;
-}
-
-.btn-vip {
   color: var(--gold);
   text-transform: uppercase;
   font-weight: 800;
   border: 2px solid var(--gold);
 }
 
-.btn-vip:focus {
+.btn-bingo:focus {
   background-color: #141414;
 }
