--- a/src/assets/css/Forms.css
+++ b/src/assets/css/Forms.css
@@ -7,13 +7,7 @@
 
 .title-auth {
   color: #c62f3a;
-  border-top: 1.5px solid #66623f;
-	border-bottom: 1.5px solid #66623f;
-  -moz-border-image: -moz-linear-gradient(to right, #000000, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #000000);
-  -webkit-border-image: -webkit-linear-gradient(to right, #000000, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #000000);
-  border-image: linear-gradient(to right, #000000, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #66623F, #000000);
-  border-image-slice: 1;
-	letter-spacing: 4px;
+	letter-spacing: 2px;
 }
 
 .link-auth {
@@ -44,22 +38,12 @@ label {
 }
 
 .btn-bingo {
-	border-radius: 0;
-	letter-spacing: 2px;
-	color: #c62f3a;
-	font-size: 20px;
-	font-weight: 600;
-	border-top: 1.5px solid #66623f;
-	border-bottom: 1.5px solid #66623f;
-}
-
-.btn-vip {
   color: var(--gold);
   text-transform: uppercase;
   font-weight: 800;
   border: 2px solid var(--gold);
 }
 
-.btn-vip:focus {
+.btn-bingo:focus {
   background-color: #141414;
 }
