--- a/src/assets/css/Forms.css
+++ b/src/assets/css/Forms.css
@@ -44,6 +44,10 @@ label {
   border: 2px solid var(--gold);
 }
 
+.btn-bingo:hover {
+  border: 2px solid rgb(130, 130, 130)!important;
+}
+
 .btn-bingo:focus {
   background-color: #141414;
 }
